* Delete subsite removes data from main site on multisite network - FIXED
* CPT type post class not set to ajax listings - FIXED
* Custom field accepets script tags - FIXED
* Business hours option added to show next day closing - FIXED
* Netwrok subsite shows countries table does not exist error - FIXED

= 2.0.0.66 =
* GD post favourites widget issue for icon option - FIXED
* Timezone API requests exposes the API key - FIXED
* Setup wizard moved to later hook so is_block_editor() method can be used - FIXED
* Category map icon no longer required when adding a category - CHANGED
* Category map icon will be auto-generated if empty and Font Awesome icon is set - ADDED
* Default map marker updated to new icon - CHANGED
* Custom price field does not shows currency symbol for decimal data type - FIXED
* Category should be auto selected/checked for a single category - CHANGED
* Output location fieldset's with child elements will only be output if child elements have content - CHANGED
* Import post not showing error for non GD post type - FIXED
* Beaver themer layout not working with GD widgets - FIXED
* Directory map not showing child categories for empty parent category - FIXED
* If Google maps is disabled then use OpenStreetMap API to get GPS data during import - ADDED
* Genesis theme listing detail page shows incorrect meta title - FIXED
* [gd_post_meta] shortcode location parameter is not working - FIXED
* Going away from edit listing page always shows popup warning about unsaved changes - FIXED
* The7 theme compatibility for GD pages - FIXED
* Ninja forms widget now has option to output the form direct, can be used in sidebar or in tab - ADDED
* Include post images in Rank Math sitemap - ADDED

= 2.0.0.65 =
* Jarida theme compatibility for GD page sidebars - FIXED
* Business hours timepicker translation not working on first load - FIXED
* GeneratePress theme not showing correct SEO meta on detail page - FIXED