@@ -13,6 +13,7 @@
 * Custom field accepets script tags - FIXED
 * Business hours option added to show next day closing - FIXED
 * Netwrok subsite shows countries table does not exist error - FIXED
+* Added a new pre-defined field "Distance To" - ADDED
 
 = 2.0.0.66 =
 * GD post favourites widget issue for icon option - FIXED
